completed landing page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -106,9 +106,7 @@ All colors MUST be HSL.
 
   body {
     @apply bg-background text-foreground;
-    background-image: url('./assets/dark-bg.jpg');
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+    background-color: #28406f;
+    
   }
 }
