--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -110,3 +110,22 @@ All colors MUST be HSL.
     
   }
 }
+
+/* Custom scrollbar styles */
+::-webkit-scrollbar {
+  width: 0px;
+  background: #28406f;
+}
+
+::-webkit-scrollbar-thumb {
+  background: hsl(200 95% 85%);
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: hsl(200 95% 75%);
+}
+
+::-webkit-scrollbar-track {
+  background: #28406f;
+}
